--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "RESTful API that allows users to fetch news articles from multiple sources based on their preferences.",
   "main": "src/app.js",
   "scripts": {
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/chinmaykunkikar/news-aggregator-api/issues"
   },
-  "homepage": "https://github.com/chinmaykunkikar/news-aggregator-api#readme"
+  "homepage": "https://github.com/chinmaykunkikar/news-aggregator-api#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.22"
+  }
 }
