--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
