--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ajv": "^8.12.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "better-ajv-errors": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0"
