--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "better-ajv-errors": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "redis": "^4.6.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
