--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "better-ajv-errors": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "redis": "^4.6.6"
   },
