--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/chinmaykunkikar/news-aggregator-api#readme",
   "dependencies": {
     "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "better-ajv-errors": "^1.2.0",
