--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^3.3.6",
-    "redis": "^4.6.6"
+    "redis": "^4.6.6",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
