--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^3.3.6",
-    "redis": "^4.6.6",
     "winston": "^3.8.2"
   },
   "devDependencies": {
