--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "nanoid": "^3.3.6",
+    "rate-limiter-flexible": "^2.4.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
