--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful API that allows users to fetch news articles from multiple sources based on their preferences.",
   "main": "src/app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "node --watch --no-warnings src/app.js",
     "test": "mocha --recursive 'test/**/*.js' --timeout 10000 --exit"
   },
   "repository": {
@@ -34,7 +34,6 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^2.0.22"
+    "mocha": "^10.2.0"
   }
 }
